refactor to address review comments
