# apps/cloud-backend/fusion-core/internal/api/routes.go
@@ -24,11 +24,8 @@ func (a *API) registerRoutes() {
 		projects.DELETE("/:projectId", projectHandler.DeleteProject)
 		projects.PUT("/:projectId/users/:userEmail", projectHandler.AssignUserToProject)
 		projects.DELETE("/:projectId/users/:userEmail", projectHandler.RemoveUserFromProject)
-		projects.PUT("/:projectId/star/:userId", projectHandler.StarProject)
-		projects.DELETE("/:projectId/star/:userId", projectHandler.UnstarProject)
-		projects.PUT("/:projectId/archive", projectHandler.ArchiveProject)
-		projects.DELETE("/:projectId/archive", projectHandler.UnarchiveProject)
-		projects.PUT("/:projectId/lock", projectHandler.LockProject)
-		projects.DELETE("/:projectId/lock", projectHandler.UnlockProject)
+		projects.POST("/:projectId/star/:userId", projectHandler.UpdateProjectStar)
+		projects.POST("/:projectId/archive", projectHandler.UpdateProjectArchive)
+		projects.POST("/:projectId/lock", projectHandler.UpdateProjectLock)
 	}
 }
